--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 				<td style="min-width: 10px;border-collapse: collapse;border-spacing: 0;padding: 0;"></td>
 				<td align="center" valign="middle" style="min-width: 280px; border-collapse: collapse;border-spacing: 0;padding:0;">
 
-					<div style="overflow: hidden; background-color: #c4c4c4; padding: 10px 0;max-width: 600px;">
-						<img src="img/logoImage.png" width="180px" height="50px" alt="logo image" />
+					<div style="overflow: hidden; background-color: #c4c4c4; padding: 30px 0 20px;max-width: 600px;">
+						<img src="https://raw.githubusercontent.com/ivanverbov/EmailConstructor/main/img/logoImage.png" width="180px" height="50px" alt="logo image" />
 				</div>
 					</td>
 				<td style="min-width: 10px;border-collapse: collapse;border-spacing: 0;padding: 0;"></td>
@@ -62,7 +62,7 @@
 				<td style="min-width: 10px;border-collapse: collapse;border-spacing: 0;padding: 0;"></td>
 				<td align="center" valign="middle" style="min-width: 280px; border-collapse: collapse;border-spacing: 0;padding:0;">
 					<div style="overflow: hidden; background-color: #fff; padding:0;max-width: 600px;">
-						<img src="img/wideImage600.png" alt="blog Item Image" style="width:100%; height:auto;"/>
+						<img src="https://raw.githubusercontent.com/ivanverbov/EmailConstructor/main/img/wideImage600.png" alt="blog Item Image" style="width:100%; height:auto;"/>
 					</div>
 				</td>
 				<td style="min-width: 10px;border-collapse: collapse;border-spacing: 0;padding: 0;"></td>
@@ -119,7 +119,7 @@
 				<td align="center" valign="middle" style="min-width: 280px; border-collapse: collapse;border-spacing: 0;padding:0;">
 					<div style="overflow: hidden; background-color: #fff; padding:30px 0 0;max-width: 600px;">
 						<p style="line-height:1.4em; font-size:1.2em; padding:0 20px; margin:0;"><strong>Top leading text</strong></p>
-						<h2 style="line-height:1.4em; font-size:2em; padding:0 20px; margin:0;">Catalog items / H2</h2>
+						<h2 style="line-height:1.4em; font-size:2.2em; padding:0 20px; margin:0;">Catalog items / H2</h2>
 						<p style="line-height:1.4em; font-size:1.2em; padding:6px 20px 0; margin:0;"><strong>Bottom leading text</strong></p>
 					</div>
 				</td>
@@ -163,12 +163,12 @@
 									<td></td>
 									<!-- Catalog item 1 image -->
 									<td width="50%" valign="top" style="border-collapse:separate;border-spacing:0px;border-left:1px solid #E6E6E6;border-right:1px solid #E6E6E6;border-top:1px solid #E6E6E6;">
-										<img src="img/catItemImage.png" alt="blog Item Image" style="width:100%; height:auto;"/>
+										<img src="https://raw.githubusercontent.com/ivanverbov/EmailConstructor/main/img/catItemImage.png" alt="blog Item Image" style="width:100%; height:auto;"/>
 									</td>
 									<td></td>
 									<!-- Catalog item 2 image -->
 									<td width="50%" valign="top" style="border-collapse:separate;border-spacing:0px;border-left:1px solid #E6E6E6;border-right:1px solid #E6E6E6;border-top:1px solid #E6E6E6;">
-										<img src="img/catItemImage.png" alt="blog Item Image" style="width:100%; height:auto;"/>
+										<img src="https://raw.githubusercontent.com/ivanverbov/EmailConstructor/main/img/catItemImage.png" alt="blog Item Image" style="width:100%; height:auto;"/>
 									</td>
 									<td></td>
 								</tr>
@@ -274,7 +274,7 @@
 								<tr>
 									<td></td>
 									<td width="19%" valign="top" style="border-collapse:separate;border-spacing:0px;border-bottom:1px solid #E6E6E6;">
-										<img src="img/catItemImage100.png" alt="blog Item Image" style="width:100%; height:auto;padding:6px 0 0;"/>
+										<img src="https://raw.githubusercontent.com/ivanverbov/EmailConstructor/main/img/catItemImage100.png" alt="blog Item Image" style="width:100%; height:auto;padding:6px 0 0;"/>
 									</td>
 
 									<td valign="top" style="border-collapse:separate;border-spacing:0px;border-bottom:1px solid #E6E6E6;">
@@ -290,7 +290,7 @@
 								<tr>
 									<td></td>
 									<td width="19%" valign="top" style="border-collapse:separate;border-spacing:0px;border-bottom:1px solid #E6E6E6;">
-										<img src="img/catItemImage100.png" alt="blog Item Image" style="width:100%; height:auto;padding:6px 0 0;"/>
+										<img src="https://raw.githubusercontent.com/ivanverbov/EmailConstructor/main/img/catItemImage100.png" alt="blog Item Image" style="width:100%; height:auto;padding:6px 0 0;"/>
 									</td>
 
 									<td valign="top" style="border-collapse:separate;border-spacing:0px;border-bottom:1px solid #E6E6E6;">
@@ -347,12 +347,12 @@
 									<td></td>
 									<!-- Catalog item 1 image -->
 									<td width="50%" valign="top" style="border-collapse:separate;border-spacing:0px;border-left:1px solid #E6E6E6;border-right:1px solid #E6E6E6;border-top:1px solid #E6E6E6;">
-										<img src="img/catItemImageVertical.png" alt="blog Item Image" style="width:100%; height:auto;"/>
+										<img src="https://raw.githubusercontent.com/ivanverbov/EmailConstructor/main/img/catItemImageVertical.png" alt="blog Item Image" style="width:100%; height:auto;"/>
 									</td>
 									<td></td>
 									<!-- Catalog item 2 image -->
 									<td width="50%" valign="top" style="border-collapse:separate;border-spacing:0px;border-left:1px solid #E6E6E6;border-right:1px solid #E6E6E6;border-top:1px solid #E6E6E6;">
-										<img src="img/catItemImageVertical.png" alt="blog Item Image" style="width:100%; height:auto;"/>
+										<img src="https://raw.githubusercontent.com/ivanverbov/EmailConstructor/main/img/catItemImageVertical.png" alt="blog Item Image" style="width:100%; height:auto;"/>
 									</td>
 									<td></td>
 								</tr>
@@ -431,7 +431,7 @@
 				<td style="min-width: 10px;border-collapse: collapse;border-spacing: 0;padding: 0;"></td>
 				<td align="center" valign="middle" style="min-width: 280px; border-collapse: collapse;border-spacing: 0;padding:0;">
 					<div style="overflow: hidden; background-color: #fff; padding:30px 0 0;max-width: 600px;">
-						<h2 style="line-height:1.4em; font-size:2em; padding:0 20px; margin:0;">Blog list items / H2</h2>
+						<h2 style="line-height:1.4em; font-size:2.2em; padding:0 20px; margin:0;">Blog list items / H2</h2>
 						<p style="line-height:1.4em; font-size:1.2em; padding:6px 20px 0; margin:0;"><strong>Bottom leading text</strong></p>
 					</div>
 				</td>
@@ -455,7 +455,7 @@
 								<tr>
 									<td></td>
 									<td width="50%" valign="top" style="border-collapse:separate;border-spacing:0px;border-bottom:1px solid #E6E6E6;">
-										<img src="img/Image260-150.png" alt="blog Item Image" style="width:100%; height:auto;padding:6px 0 0;"/>
+										<img src="https://raw.githubusercontent.com/ivanverbov/EmailConstructor/main/img/Image260-150.png" alt="blog Item Image" style="width:100%; height:auto;padding:6px 0 0;"/>
 									</td>
 
 									<td valign="middle" style="border-collapse:separate;border-spacing:0px;border-bottom:1px solid #E6E6E6;">
@@ -475,7 +475,7 @@
 										<p style="line-height:1.4em; font-size:1em; padding:10px 0; margin:0; color:#000;"><a href="#" style="text-decoration:none; color:#0056FE;">Read more</a></p>
 									</td>
 									<td width="50%" valign="top" style="border-collapse:separate;border-spacing:0px;border-bottom:1px solid #E6E6E6;">
-										<img src="img/Image260-150.png" alt="blog Item Image" style="width:100%; height:auto;padding:6px 0 0;"/>
+										<img src="https://raw.githubusercontent.com/ivanverbov/EmailConstructor/main/img/Image260-150.png" style="width:100%; height:auto;padding:6px 0 0;"/>
 									</td>
 									<td></td>
 								</tr>
@@ -505,7 +505,7 @@
 							<tbody>
 								<tr>
 									<td><h3 style="line-height:1.4em; font-size:1.6em; padding:20px 0; margin:0;"><a href="#" style="text-decoration:none; color:#fff;">Banner / H3 with a link</a></h3><td>
-									<td width="40px"><a href="#"><img style="width:36px; height:36px;" src="img/arrowLeft.png" alt="link arrow" /></a></td>
+									<td width="40px"><a href="#"><img style="width:36px; height:36px;" src="https://raw.githubusercontent.com/ivanverbov/EmailConstructor/main/img/arrowLeft.png" alt="link arrow" /></a></td>
 								</tr>
 							</tbody>
 						</table>
@@ -550,7 +550,7 @@
 
 					<div style="overflow: hidden; background-color: #FAFAFA; padding:50px 0 0;max-width: 600px;">
 						<p style="line-height:1.4em; padding:0 20px; margin:0;" align="center">
-							<img src="img/emoji.png" alt="emoji" style="width:40px; height:40px;" />
+							<img src="https://raw.githubusercontent.com/ivanverbov/EmailConstructor/main/img/emoji.png" alt="emoji" style="width:40px; height:40px;" />
 						</p>
 						<h3 style="line-height:1.4em; font-size:1.2em; padding:20px; margin:0;">Thanks a lot! Work hard!</h3>
 						<p style="line-height:1.4em; font-size:1em; padding:0 20px; margin:0; color:#848484">You are receiving this email because you opted in at our website - <a href="#" style="text-decoration:none; color:#0056FE;">website.com</a>. <a href="#" style="text-decoration:none; color:#0056FE;">Unsubscribe link</a>.</p>
@@ -571,19 +571,19 @@
 				 			 <tr>
 
 				 				<td align="right" style="padding-right:6px">
-				 				<a style="color:#333!important; text-decoration:none;" href="#"><img style="display:block;" alt="instagram" width="40" height="40" border="0" src="img/instagramm.png" alt="Instagram" /></a>
+				 				<a style="color:#333!important; text-decoration:none;" href="#"><img style="display:block;" alt="instagram" width="40" height="40" border="0" src="https://raw.githubusercontent.com/ivanverbov/EmailConstructor/main/img/instagramm.png" alt="Instagram" /></a>
 				 				</td>
 
 				 				<td width="50" align="center">
-				 				<a  style="color:#333!important; text-decoration:none;" href="#"><img style="display:block;" alt="facebook" width="40" height="40" border="0" src="img/facebook.png" alt="Facebook" /></a>
+				 				<a  style="color:#333!important; text-decoration:none;" href="#"><img style="display:block;" alt="facebook" width="40" height="40" border="0" src="https://raw.githubusercontent.com/ivanverbov/EmailConstructor/main/img/facebook.png" alt="Facebook" /></a>
 				 				</td>
 
 				 				<td width="50" align="center">
-				 				<a style="color:#333!important; text-decoration:none;" href="#"><img style="display:block;" alt="twitter" width="40" height="40" border="0" src="img/twitter.png" alt="Twitter" /></a>
+				 				<a style="color:#333!important; text-decoration:none;" href="#"><img style="display:block;" alt="twitter" width="40" height="40" border="0" src="https://raw.githubusercontent.com/ivanverbov/EmailConstructor/main/img/twitter.png" alt="Twitter" /></a>
 				 				</td>
 
 				 				<td align="left"  style="padding-left:6px">
-				 				<a style="color:#333!important; text-decoration:none;" href="#"><img style="display:block;" alt="youtube" width="40" height="40" border="0" src="img/youtube.png" alt="Telegramm" /></a>
+				 				<a style="color:#333!important; text-decoration:none;" href="#"><img style="display:block;" alt="youtube" width="40" height="40" border="0" src="https://raw.githubusercontent.com/ivanverbov/EmailConstructor/main/img/youtube.png" alt="Telegramm" /></a>
 				 				</td>
 
 				 			</tr>
