--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+
+<!-- created by Ivan Verbov, 2021, https://sitory.by -->
+<!-- E-commerce email template / version 1.0 -->
+
+
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
-<title>E-commerce E-mail Template</title>
+<title>Email Constructor</title>
 
 </head>
 <body style="width:100% !important; -webkit-text-size-adjust:100%; -ms-text-size-adjust:100%; margin:0; padding:0; font-family:Roboto, Helvetica, Arial, sans-serif; font-size:14px;">
@@ -22,7 +27,7 @@
 				<td style="min-width: 10px;border-collapse: collapse;border-spacing: 0;padding: 0;"></td>
 				<td align="center" valign="middle" style="min-width: 280px; border-collapse: collapse;border-spacing: 0;padding:0;">
 
-					<div style="overflow: hidden; background-color: #c4c4c4; padding: 30px 0 20px;max-width: 600px;">
+					<div style="margin:0; border:none; overflow: hidden; background-color: #c4c4c4; padding: 30px 0 20px;max-width: 600px;">
 						<img src="https://raw.githubusercontent.com/ivanverbov/EmailConstructor/main/img/logoImage.png" width="180px" height="50px" alt="logo image" />
 				</div>
 					</td>
@@ -35,7 +40,7 @@
 			<tr>
 				<td style="min-width: 10px;border-collapse: collapse;border-spacing: 0;padding: 0;"></td>
 				<td align="center" valign="middle" style="min-width: 280px; border-collapse: collapse;border-spacing: 0;padding:0;">
-					<div style="overflow: hidden; background-color: #fff; padding: 20px 0;max-width: 600px;">
+					<div style="margin:0; border:none; overflow: hidden; background-color: #fff; padding: 20px 0;max-width: 600px;">
 						<table width="100%" cellpadding="6px" cellspacing="0" border="0" align="center">
 							<tbody>
 								<tr>
@@ -61,7 +66,7 @@
 			<tr>
 				<td style="min-width: 10px;border-collapse: collapse;border-spacing: 0;padding: 0;"></td>
 				<td align="center" valign="middle" style="min-width: 280px; border-collapse: collapse;border-spacing: 0;padding:0;">
-					<div style="overflow: hidden; background-color: #fff; padding:0;max-width: 600px;">
+					<div style="margin:0; border:none; overflow: hidden; background-color: #fff; padding:0;max-width: 600px;">
 						<img src="https://raw.githubusercontent.com/ivanverbov/EmailConstructor/main/img/wideImage600.png" alt="blog Item Image" style="width:100%; height:auto;"/>
 					</div>
 				</td>
@@ -77,7 +82,7 @@
 			<tr>
 				<td style="min-width: 10px;border-collapse: collapse;border-spacing: 0;padding: 0;"></td>
 				<td align="center" valign="middle" style="min-width: 280px; border-collapse: collapse;border-spacing: 0;padding:0;">
-					<div style="overflow: hidden; background-color: #fff; padding:50px 0 0;max-width: 600px;">
+					<div style="margin:0; border:none; overflow: hidden; background-color: #fff; padding:50px 0 0;max-width: 600px;">
 						<p style="line-height:1.4em; font-size:1.2em; padding:0 20px; margin:0;"><strong>Center-aligned text.</strong> Prepared use even contained lived lovers sensible covered match delivered <a href="#" style="text-decoration:none; color:#0056FE;">quick link</a>. Enable depend tolerably reached though woman views end. Limited hills pleasure proposal: </p>
 					</div>
 				</td>
@@ -93,7 +98,7 @@
 			<tr>
 				<td style="min-width: 10px;border-collapse: collapse;border-spacing: 0;padding: 0;"></td>
 				<td align="center" valign="middle" style="min-width: 280px; border-collapse: collapse;border-spacing: 0;padding:0;">
-					<div style="overflow: hidden; background-color: #fff; padding:30px 0 0;max-width: 600px;">
+					<div style="margin:0; border:none; overflow: hidden; background-color: #fff; padding:30px 0 0;max-width: 600px;">
 						<table width="100%" cellpadding="0" cellspacing="0" border="0" align="center">
 							<tbody>
 								<tr>
@@ -446,7 +451,7 @@
 			<tr>
 				<td style="min-width: 10px;border-collapse: collapse;border-spacing: 0;padding: 0;"></td>
 				<td align="center" valign="top" style="min-width: 280px; border-collapse: collapse;border-spacing: 0;padding:0;">
-					<div style="overflow: hidden; background-color: #fff; padding:20px 0 0;max-width: 600px;">
+					<div style="margin:0; border:none; overflow: hidden; background-color: #fff; padding:20px 0 0;max-width: 600px;">
 
 						<table width="100%" cellpadding="8" cellspacing="0" border="0" align="left">
 							<tbody>
@@ -499,7 +504,7 @@
 			<tr>
 				<td style="min-width: 10px;border-collapse: collapse;border-spacing: 0;padding: 0;"></td>
 				<td align="center" valign="middle" style="min-width: 280px; border-collapse: collapse;border-spacing: 0;padding:0;">
-					<div style="overflow: hidden; background-color: #fff; padding:30px 0 0;max-width: 600px;">
+					<div style="margin:0; border:none; overflow: hidden; background-color: #fff; padding:30px 0 0;max-width: 600px;">
 
 						<table width="100%" cellpadding="20" cellspacing="0" border="0" align="left" bgcolor="#000";>
 							<tbody>
@@ -522,7 +527,7 @@
 			<tr>
 				<td style="min-width: 10px;border-collapse: collapse;border-spacing: 0;padding: 0;"></td>
 				<td align="center" valign="middle" style="min-width: 280px; border-collapse: collapse;border-spacing: 0;padding:0;">
-					<div style="overflow: hidden; background-color: #fff; padding:50px 0 0;max-width: 600px;">
+					<div style="margin:0; border:none; overflow: hidden; background-color: #fff; padding:50px 0 0;max-width: 600px;">
 						<p style="line-height:1.4em; font-size:1.2em; padding:0 20px; margin:0; color:#848484;"><strong>Center-aligned muted text.</strong> Prepared use even contained lived lovers sensible covered match delivered <a href="#" style="text-decoration:none; color:#0056FE;">quick link</a>. Enable depend tolerably reached though woman views end. Limited hills pleasure proposal: </p>
 					</div>
 				</td>
@@ -538,7 +543,7 @@
 			<tr>
 				<td style="min-width: 10px;border-collapse: collapse;border-spacing: 0;padding: 0;"></td>
 				<td align="center" valign="middle" height="60px" style="min-width: 280px; border-collapse: collapse;border-spacing: 0;padding:0;">
-					<div style="overflow: hidden; background-color: #fff; padding:60px 0 0;max-width: 600px;">
+					<div style="margin:0; border:none; overflow: hidden; background-color: #fff; padding:60px 0 0;max-width: 600px;">
 					</div>
 				</td>
 				<td style="min-width: 10px;border-collapse: collapse;border-spacing: 0;padding: 0;"></td>
@@ -548,7 +553,7 @@
 				<td style="min-width: 10px;border-collapse: collapse;border-spacing: 0;padding: 0;"></td>
 				<td align="center" valign="middle" style="min-width: 280px; border-collapse: collapse;border-spacing: 0;padding:0;">
 
-					<div style="overflow: hidden; background-color: #FAFAFA; padding:50px 0 0;max-width: 600px;">
+					<div style="margin:0; border:none; overflow: hidden; background-color: #FAFAFA; padding:50px 0 0;max-width: 600px;">
 						<p style="line-height:1.4em; padding:0 20px; margin:0;" align="center">
 							<img src="https://raw.githubusercontent.com/ivanverbov/EmailConstructor/main/img/emoji.png" alt="emoji" style="width:40px; height:40px;" />
 						</p>
@@ -564,7 +569,7 @@
 			<tr>
 				<td style="min-width: 10px;border-collapse: collapse;border-spacing: 0;padding: 0;"></td>
 				<td align="center" valign="middle" style="min-width: 280px; border-collapse: collapse;border-spacing: 0;padding:0;">
-					<div style="overflow: hidden; background-color: #FAFAFA; padding:30px 0 60px;max-width: 600px;">
+					<div style="margin:0; border:none; overflow: hidden; background-color: #FAFAFA; padding:30px 0 60px;max-width: 600px;">
 
 						<table cellpadding="0" cellspacing="0" border="0" align="center" bgcolor="#FAFAFA" style="border-collapse: collapse;mso-table-lspace: 0pt;font-family:Helvetica, Arial, sans-serif;background-color: #F7F9FC;border: none;height: 100%;width: 100%;">
 				 		 <tbody>
@@ -603,8 +608,6 @@
 
 		</tbody>
 	</table>
-
-
 
 </body>
 </html>
