--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
 																		<tr>
 																			<td align="center" valign="middle" style="min-width:280px; border-collapse:collapse; border-spacing:0; padding:0; margin:0;">
 
-																				<div style="margin:0; border:none; overflow: hidden; background-color: #FAFAFA; padding:50px 0 0;max-width: 600px;">
+																				<div style="margin:0; border:none; overflow: hidden; background-color: #fff; padding:50px 0 0;max-width: 600px;">
 																					<p style="line-height:1.4em; padding:0 20px; margin:0;" align="center">
 																						<img src="https://raw.githubusercontent.com/ivanverbov/EmailConstructor/main/img/emoji.png" alt="emoji" style="width:40px; height:40px;" />
 																					</p>
